comments added, tested responsiveness

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app-wrapper" fxLayout="column" fxLayoutAlign="center">
+  <div class="app-wrapper__lazy-route" fxFlex="grow">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
